up to static files

--- a/scripts/views/state.ejs
+++ b/scripts/views/state.ejs
@@ -31,25 +31,16 @@
             </div>
           </div>
 
-          <!-- Search textbox -->
-          <!--<form class="form-inline my-2 my-lg-0">
-  		      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-
-  					<span data-toggle="tooltip" title="Search" class="text-info" data-placement="bottom">
-  						<button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="background: #fff;">
-  							<img src="https://images.vexels.com/media/users/3/132068/isolated/preview/f9bb81e576c1a361c61a8c08945b2c48-search-icon-by-vexels.png" width="17" height="17"/>
-  						</button>
-  					</span>
-  		    </form>-->
-
         </div>
       </div>
 
+			<!-- // Showing results
 			<div class="row">
         <div class="col my-4">
-					<h2 class="lead"><strong>Showing results for: <%= stateName %></strong></h2>
+					<h2 class="lead"><strong>Showing results for: <XX%XX= stateName %XX></strong></h2>
         </div>
-      </div>
+      </div> -->
+
 		</div>
 
 		<div class="container text-muted">
