--- a/scripts/views/designation.ejs
+++ b/scripts/views/designation.ejs
@@ -12,44 +12,7 @@
     <div id="top" />
 
 		<!-- Nav bar -->
-		<nav class="navbar navbar-expand-md navbar-dark bg-info">
-		  <a class="navbar-brand" href="index.html">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/US-NationalParkService-ShadedLogo.svg/2000px-US-NationalParkService-ShadedLogo.svg.png" width="30" height="30" alt="">
-				NPS Kiosk
-			</a>
-
-			<!-- Three line collapse button -->
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-		  </button>
-
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		    <ul class="navbar-nav mr-auto">
-		      <li class="nav-item active">
-		        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-		      </li>
-
-		      <li class="nav-item dropdown">
-		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		          Find a Park
-		        </a>
-		        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-		          <a class="dropdown-item" href="state.html">By State</a>
-		          <a class="dropdown-item" href="designation.html">By Designation</a>
-		          <!--<div class="dropdown-divider"></div>-->
-		          <a class="dropdown-item" href="search.html">By Name or Keyword</a>
-		        </div>
-		      </li>
-		    </ul>
-		  </div>
-		</nav>
-
-		<div class="jumbotron jumbotron-fluid bg-info text-white text-center" style="background: #aaa;">
-			<div class="container">
-				<h1 class="display-4">National Park Service Information Kiosk</h1>
-				<p class="lead">Created by Ariana Zhu for Capital One 2019 SWE Summit.</p>
-			</div>
-		</div>
+    <% include partials/nav.ejs %>
 
     <div class="container">
       <div class="row">
