--- a/scripts/views/index.ejs
+++ b/scripts/views/index.ejs
@@ -32,65 +32,7 @@
 			</form>
 		</div> -->
 
-		<!-- Nav bar -->
-		<nav class="navbar navbar-expand-md navbar-dark bg-info">
-		  <a class="navbar-brand" href="index.html">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/US-NationalParkService-ShadedLogo.svg/2000px-US-NationalParkService-ShadedLogo.svg.png" width="30" height="30" alt="">
-				NPS Kiosk
-			</a>
-
-			<!-- Three line collapse button -->
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-		  </button>
-
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		    <ul class="navbar-nav mr-auto">
-		      <li class="nav-item active">
-		        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-		      </li>
-					<!-- Link -->
-					<!--
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">Link</a>
-		      </li> -->
-		      <li class="nav-item dropdown">
-		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		          Find a Park
-		        </a>
-		        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-		          <a class="dropdown-item" href="state.html">By State</a>
-		          <a class="dropdown-item" href="designation.html">By Designation</a>
-		          <!--<div class="dropdown-divider"></div>-->
-		          <a class="dropdown-item" href="search.html">By Name or Keyword</a>
-		        </div>
-		      </li>
-					<!-- Disabled -->
-					<!--
-		      <li class="nav-item">
-		        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-		      </li>v-->
-		    </ul>
-
-				<!-- Top right search bar -->
-		    <!--<form class="form-inline my-2 my-lg-0">
-		      <input class="form-control mr-sm-2" type="search" placeholder="Search park name/keyword" aria-label="Search">
-
-					<span data-toggle="tooltip" title="Search" class="text-info" data-placement="bottom">
-						<button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="background: #fff;">
-							<img src="https://images.vexels.com/media/users/3/132068/isolated/preview/f9bb81e576c1a361c61a8c08945b2c48-search-icon-by-vexels.png" width="17" height="17"/>
-						</button>
-					</span>
-		    </form>-->
-		  </div>
-		</nav>
-
-		<div class="jumbotron jumbotron-fluid bg-info text-white text-center" style="background: #aaa;">
-			<div class="container">
-				<h1 class="display-4">National Park Service Information Kiosk</h1>
-				<p class="lead">Created by Ariana Zhu for Capital One 2019 SWE Summit.</p>
-			</div>
-		</div>
+    <% include partials/nav.ejs %>
 
 		<div class="container text-muted">
 			<!-- cards -->
