--- a/scripts/views/partials/nav.ejs
+++ b/scripts/views/partials/nav.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-info">
-  <a class="navbar-brand" href="index.html">
+  <a class="navbar-brand" href="/">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/US-NationalParkService-ShadedLogo.svg/2000px-US-NationalParkService-ShadedLogo.svg.png" width="30" height="30" alt="">
     NPS Kiosk
   </a>
@@ -12,7 +12,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
       </li>
 
       <li class="nav-item dropdown">
@@ -20,10 +20,10 @@
           Find a Park
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="state.html">By State</a>
-          <a class="dropdown-item" href="designation.html">By Designation</a>
+          <a class="dropdown-item" href="/find-by-state">By State</a>
+          <a class="dropdown-item" href="/find-by-designation">By Designation</a>
           <!--<div class="dropdown-divider"></div>-->
-          <a class="dropdown-item" href="search.html">By Name or Keyword</a>
+          <a class="dropdown-item" href="/search">By Name or Keyword</a>
         </div>
       </li>
 
