--- a/scripts/views/search.ejs
+++ b/scripts/views/search.ejs
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="row">
         <div class="col py-3 my-3">
-          <h2 class="display-4">Find a park by name or keyword</h2>
+          <h2 class="display-4">Find a park by name or keyword:</h2>
           <form class="form-inline my-2 my-lg-0">
   		      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 
