--- a/scripts/views/state-success.ejs
+++ b/scripts/views/state-success.ejs
@@ -27,8 +27,57 @@
 						<form id="selectState" method="POST" action="/find-by-state">
 							<input type="text" name="state" list="stateNames">
 								<datalist id="stateNames">
-								  <option value="AZ">
-								  <option value="CA">
+                  <option value="AL">Alabama</option>
+									<option value="AK">Alaska</option>
+									<option value="AZ">Arizona</option>
+									<option value="AR">Arkansas</option>
+									<option value="CA">California</option>
+									<option value="CO">Colorado</option>
+									<option value="CT">Connecticut</option>
+									<option value="DE">Delaware</option>
+									<option value="DC">District Of Columbia</option>
+									<option value="FL">Florida</option>
+									<option value="GA">Georgia</option>
+									<option value="HI">Hawaii</option>
+									<option value="ID">Idaho</option>
+									<option value="IL">Illinois</option>
+									<option value="IN">Indiana</option>
+									<option value="IA">Iowa</option>
+									<option value="KS">Kansas</option>
+									<option value="KY">Kentucky</option>
+									<option value="LA">Louisiana</option>
+									<option value="ME">Maine</option>
+									<option value="MD">Maryland</option>
+									<option value="MA">Massachusetts</option>
+									<option value="MI">Michigan</option>
+									<option value="MN">Minnesota</option>
+									<option value="MS">Mississippi</option>
+									<option value="MO">Missouri</option>
+									<option value="MT">Montana</option>
+									<option value="NE">Nebraska</option>
+									<option value="NV">Nevada</option>
+									<option value="NH">New Hampshire</option>
+									<option value="NJ">New Jersey</option>
+									<option value="NM">New Mexico</option>
+									<option value="NY">New York</option>
+									<option value="NC">North Carolina</option>
+									<option value="ND">North Dakota</option>
+									<option value="OH">Ohio</option>
+									<option value="OK">Oklahoma</option>
+									<option value="OR">Oregon</option>
+									<option value="PA">Pennsylvania</option>
+									<option value="RI">Rhode Island</option>
+									<option value="SC">South Carolina</option>
+									<option value="SD">South Dakota</option>
+									<option value="TN">Tennessee</option>
+									<option value="TX">Texas</option>
+									<option value="UT">Utah</option>
+									<option value="VT">Vermont</option>
+									<option value="VA">Virginia</option>
+									<option value="WA">Washington</option>
+									<option value="WV">West Virginia</option>
+									<option value="WI">Wisconsin</option>
+									<option value="WY">Wyoming</option>
 								</datalist>
 							<!-- <input type="submit" value="Search" /> -->
 							<button class="btn btn-outline-secondary" type="submit">Search</button>
@@ -37,10 +86,20 @@
 
         </div>
       </div>
-
 		</div>
 
 		<div class="container text-muted">
+      <% var counter = 0; %>
+      <% for (var i=0; i < (parkInfo.length/4) + 1; i++) { %>
+        <div class="row">
+        <% do {
+            if (parkInfo[i].states == data.state) {
+            counter += 1;
+            }
+        } while (counter%4 != 0)%>
+        </div>
+      <% } %>
+
 			<!-- cards -->
 			<div class="row">
 				<div class="col-md-6 col-lg-3">
