--- a/scripts/views/state-success.ejs
+++ b/scripts/views/state-success.ejs
@@ -4,6 +4,10 @@
 		<title>NPS Kiosk: Find by State</title>
 
     <style>
+			input[type=text] {
+				width: 100px;
+			}
+
       .card-img-top {
         max-height: 160px;
         min-height: 160px;
@@ -11,7 +15,12 @@
       }
 
       .top-buffer {
-        margin-top:20px;
+        margin-top: 20px;
+      }
+
+      a.custom-card,
+      a.custom-card:hover {
+        color: inherit;
       }
     </style>
 
@@ -112,21 +121,27 @@
       <% var counter = 0; %>
       <% for (var i=0; i < (matches.length/4) + 1; i++) { %>
         <div class="row top-buffer">
-        <% for (var j=0; j < 4; j++) {
+          <% if (matches.length == 0) { %>
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch">
+              <p class="lead">No results found.</p>
+            </div>
+          <% } %>
+          <% for (var j=0; j < 4; j++) {
             counter++;
             if (counter > matches.length) break;
           %>
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch">
-            <div class="card">
-              <% var image = "" + matches[counter-1].images[0].url; %>
-              <% console.log(image); %>
-              <img src="<%=encodeURI(image)%>" class="card-img-top img-fluid" height="250" id="cardImage"/>
+						<a href="/parks/<%=encodeURI(matches[counter-1].parkCode)%>" class="custom-card d-flex align-items-stretch">
+            	<div class="card">
+                <% var image = "" + matches[counter-1].images[0].url; %>
+                <img src="<%=encodeURI(image)%>" class="card-img-top img-fluid" height="250" id="cardImage"/>
 
-              <div class="card-body">
-                <h3 class="card-title"><%= matches[counter-1].fullName %></h3>
-                <p> <%= matches[counter-1].addresses[0].city %>, <%= matches[counter-1].addresses[0].stateCode %></p>
+                <div class="card-body">
+                  <h3 class="card-title"><%= matches[counter-1].fullName %></h3>
+                  <p> <%= matches[counter-1].addresses[0].city %>, <%= matches[counter-1].addresses[0].stateCode %></p>
+                </div>
               </div>
-            </div>
+						</a>
           </div>
         <% } %>
         </div>
