--- a/scripts/views/search.ejs
+++ b/scripts/views/search.ejs
@@ -18,69 +18,19 @@
       <div class="row">
         <div class="col py-3 my-3">
           <h2 class="display-4">Find a park by name or keyword:</h2>
-          <form class="form-inline my-2 my-lg-0">
-  		      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-
-  					<span data-toggle="tooltip" title="Search" class="text-info" data-placement="bottom">
-  						<button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="background: #fff;">
-  							<img src="https://images.vexels.com/media/users/3/132068/isolated/preview/f9bb81e576c1a361c61a8c08945b2c48-search-icon-by-vexels.png" width="17" height="17"/>
-  						</button>
-  					</span>
-  		    </form>
+						<div class="input-group">
+		          <form class="form-inline my-2 my-lg-0" method="POST" action="/search">
+		  		      <input name="keyword" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+			  					<span data-toggle="tooltip" title="Search" class="text-info" data-placement="bottom">
+			  						<button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="background: #fff;">
+			  							<img src="https://images.vexels.com/media/users/3/132068/isolated/preview/f9bb81e576c1a361c61a8c08945b2c48-search-icon-by-vexels.png" width="17" height="17"/>
+			  						</button>
+			  					</span>
+		  		    </form>
+					</div>
         </div>
       </div>
 		</div>
-
-		<div class="container text-muted">
-			<!-- cards -->
-			<div class="row">
-				<div class="col-md-6 col-lg-3">
-					<div class="card">
-						<img src="https://www.nps.gov/common/uploads/grid_builder/deva/crop16_9/9B65A85A-1DD8-B71B-0BDF4BF50595F57F.jpg?width=950&quality=90&mode=crop" class="card-img-top img-fluid"/>
-						<div class="card-body">
-							<h3 class="card-title">Death Valley</h3>
-							<p>However, as a project get bigger, it becomes overwhelming to keep all the code in one file. Python projects use packages to organize code into multiple modules that can be imported where needed, and the tutorial will do this as well.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3">
-					<div class="card">
-						<img src="https://www.nps.gov/common/uploads/grid_builder/deva/crop16_9/9B65A85A-1DD8-B71B-0BDF4BF50595F57F.jpg?width=950&quality=90&mode=crop" class="card-img-top img-fluid"/>
-						<div class="card-body">
-							<h3 class="card-title">Death Valley</h3>
-							<p>However, as a project get bigger, it becomes overwhelming to keep all the code in one file. Python projects use packages to organize code into multiple modules that can be imported where needed, and the tutorial will do this as well.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3">
-					<div class="card">
-						<img src="https://www.nps.gov/common/uploads/grid_builder/deva/crop16_9/9B65A85A-1DD8-B71B-0BDF4BF50595F57F.jpg?width=950&quality=90&mode=crop" class="card-img-top img-fluid"/>
-						<div class="card-body">
-							<h3 class="card-title">Death Valley</h3>
-							<p>However, as a project get bigger, it becomes overwhelming to keep all the code in one file. Python projects use packages to organize code into multiple modules that can be imported where needed, and the tutorial will do this as well.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3">
-					<div class="card">
-						<img src="https://www.nps.gov/common/uploads/grid_builder/deva/crop16_9/9B65A85A-1DD8-B71B-0BDF4BF50595F57F.jpg?width=950&quality=90&mode=crop" class="card-img-top img-fluid"/>
-						<div class="card-body">
-							<h3 class="card-title">Death Valley</h3>
-							<p>However, as a project get bigger, it becomes overwhelming to keep all the code in one file. Python projects use packages to organize code into multiple modules that can be imported where needed, and the tutorial will do this as well.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-
-		</div>
-
-    <div class="container py-5">
-      <div class="row justify-content-center">
-        <a href="#top">
-          <button type="button" class="btn btn-outline-dark">Back to top</button>
-        </a>
-      </div>
-    </div>
 
 		<!-- JQuery, Tether, Bootstrap JS -->
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
