--- a/scripts/views/state-success.ejs
+++ b/scripts/views/state-success.ejs
@@ -133,9 +133,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch">
 						<a href="/parks/<%=encodeURI(matches[counter-1].parkCode)%>" class="custom-card d-flex align-items-stretch">
             	<div class="card">
-                <% var image = "" + matches[counter-1].images[0].url; %>
-                <img src="<%=encodeURI(image)%>" class="card-img-top img-fluid" height="250" id="cardImage"/>
-
+                <img src="<%=encodeURI(matches[counter-1].images[0].url)%>" class="card-img-top img-fluid" height="250" id="cardImage"/>
                 <div class="card-body">
                   <h3 class="card-title"><%= matches[counter-1].fullName %></h3>
                   <p> <%= matches[counter-1].addresses[0].city %>, <%= matches[counter-1].addresses[0].stateCode %></p>
