--- a/scripts/views/park.ejs
+++ b/scripts/views/park.ejs
@@ -49,7 +49,7 @@
 				<a class="nav-link" href="#articles" data-toggle="tab">Articles</a>
 				<a class="nav-link" href="#events" data-toggle="tab">Events</a>
 				<a class="nav-link" href="#news" data-toggle="tab">News</a>
-				<a class="nav-link" href="#lesson" data-toggle="tab">Lesson Plans</a>
+				<a class="nav-link" href="#lesson" data-toggle="tab">Learn</a>
 			</nav>
 
 			<div class="tab-content py-5">
@@ -65,39 +65,204 @@
 
 				<div class="tab-pane" id="alerts">
 					<h3>Alerts</h3>
-					<% var alerts = [];
-					for (var i=0; i<alertInfo.length; i++) {
-						if (thisPark.parkCode == alertInfo[i].parkCode) {
-							alerts.push(alertInfo[i]);
+
+						<% var alerts = [];
+						for (var i=0; i<alertInfo.length; i++) {
+							if (thisPark.parkCode == alertInfo[i].parkCode) {
+								alerts.push(alertInfo[i]);
+							}
+						}
+
+						if (alerts.length == 0) { %>
+							<p>There are currently no alerts for this park.</p>
+						<% }
+						else { %>
+							<% for (var j=0; j<alerts.length; j++) { %>
+								<div class="alert alert-light" role="alert">
+									<% if (alerts[j].category == "") {
+											if (alerts[j].url == "") { %>
+												<h5><strong><%= alerts[j].title%></strong></h5>
+											<% }
+											else { %>
+												<h5><a href="<%= alerts[j].url%>" class="alert-link"><u><%= alerts[j].title%></u></a></h5>
+											<% } %>
+									<% }
+
+									else if (alerts[j].category == "Park Closure") {
+										if (alerts[j].url == "") { %>
+											<h5 class="text-info"><strong><%= alerts[j].category%>: <%= alerts[j].title%></strong></h5>
+										<% }
+										else { %>
+											<h5><a href="<%= alerts[j].url%>" class="alert-link text-info"><u><%= alerts[j].category%>: <%= alerts[j].title%></u></a></h5>
+										<% } %>
+									<% }
+
+									else if (alerts[j].category == "Information") {
+										if (alerts[j].url == "") { %>
+											<h5 class="text-success"><strong><%= alerts[j].category%>: <%= alerts[j].title%></strong></h5>
+										<% }
+										else { %>
+											<h5><a href="<%= alerts[j].url%>" class="alert-link text-success"><u><%= alerts[j].category%>: <%= alerts[j].title%></u></a></h5>
+										<% } %>
+									<% }
+
+									else if (alerts[j].category == "Caution") {
+										if (alerts[j].url == "") { %>
+											<h5 class="text-warning"><strong><%= alerts[j].category%>: <%= alerts[j].title%></strong></h5>
+										<% }
+										else { %>
+											<h5><a href="<%= alerts[j].url%>" class="alert-link text-warning"><u><%= alerts[j].category%>: <%= alerts[j].title%></u></a></h5>
+										<% } %>
+									<% }
+
+									else if (alerts[j].category == "Danger"){
+										if (alerts[j].url == "") { %>
+											<h5 class="text-danger"><strong><%= alerts[j].category%>: <%= alerts[j].title%></strong></h5>
+										<% }
+										else { %>
+											<h5><a href="<%= alerts[j].url%>" class="alert-link text-danger"><u><%= alerts[j].category%>: <%= alerts[j].title%></u></a></h5>
+										<% } %>
+									<% }
+
+									else {
+										if (alerts[j].url == "") { %>
+											<h5><strong><%= alerts[j].category%>: <%= alerts[j].title%></strong></h5>
+										<% }
+										else { %>
+											<h5><a href="<%= alerts[j].url%>" class="alert-link"><u><%= alerts[j].category%>: <%= alerts[j].title%></u></a></h5>
+										<% } %>
+									<% } %>
+									<p><%= alerts[j].description%></p>
+								</div>
+							<% } %>
+						<% } %>
+				</div>
+				<div class="tab-pane" id="articles">
+					<h3>Articles</h3>
+					<% var articles = [];
+					for (var i=0; i<articleInfo.length; i++) {
+						if (JSON.stringify(articleInfo[i]).includes(thisPark.name)) {
+							articles.push(articleInfo[i]);
 						}
 					}
 
-					if (alerts.length == 0) { %>
-						<p>There are currently no alerts for this park.</p>
+					if (articles.length == 0) { %>
+						<p>There are currently no articles for this park.</p>
 					<% }
 					else { %>
 					<ul>
-						<% for (var j=0; j<alerts.length; j++) { %>
-							<li><%= alerts[j].title%></li>
+						<% for (var j=0; j<articles.length; j++) { %>
+							<li><a href="<%=encodeURI(articles[j].url)%>" class="custom-card"><strong><u><%= articles[j].title%></strong></u></a></li>
+							<p><%= articles[j].listingdescription%></p>
 						<% } %>
 					</ul>
 					<% } %>
 				</div>
-				<div class="tab-pane" id="articles">
-					<h3>Articles</h3>
-					<p>However, as a project get bigger, it becomes overwhelming to keep all the code in one file. Python projects use packages to organize code into multiple modules that can be imported where needed, and the tutorial will do this as well.</p>
-				</div>
 				<div class="tab-pane" id="events">
 					<h3>Events</h3>
-					<p>However, as a project get bigger, it becomes overwhelming to keep all the code in one file. Python projects use packages to organize code into multiple modules that can be imported where needed, and the tutorial will do this as well.</p>
+					<% var events = [];
+					for (var i=0; i<eventInfo.length; i++) {
+						if (JSON.stringify(eventInfo[i]).includes(thisPark.name)) {
+							events.push(eventInfo[i]);
+						}
+					}
+
+					if (events.length == 0) { %>
+						<p>There are currently no events for this park.</p>
+					<% }
+					else { %>
+					<ul>
+						<% for (var j=0; j<events.length; j++) { %>
+							<li><a href="<%=encodeURI(events[j].infourl)%>" class="custom-card"><strong><u><%= events[j].title%></strong></u></a></li>
+							<p><%= events[j].description%></p>
+						<% } %>
+					</ul>
+					<% } %>
 				</div>
 				<div class="tab-pane" id="news">
 					<h3>News</h3>
-					<p>However, as a project get bigger, it becomes overwhelming to keep all the code in one file. Python projects use packages to organize code into multiple modules that can be imported where needed, and the tutorial will do this as well.</p>
+					<% var news = [];
+					for (var i=0; i<newsInfo.length; i++) {
+						if (thisPark.parkCode == newsInfo[i].parkCode) {
+							news.push(newsInfo[i]);
+						}
+					}
+
+					if (news.length == 0) { %>
+						<p>There are currently no news releases for this park.</p>
+					<% }
+					else { %>
+					<ul>
+						<% for (var j=0; j<news.length; j++) { %>
+							<li><a href="<%=encodeURI(news[j].url)%>" class="custom-card"><strong><u><%= news[j].title%></strong></u></a></li>
+							<p><%= news[j].abstract%></p>
+						<% } %>
+					</ul>
+					<% } %>
 				</div>
 				<div class="tab-pane" id="lesson">
 					<h3>Lesson Plans</h3>
-					<p>However, as a project get bigger, it becomes overwhelming to keep all the code in one file. Python projects use packages to organize code into multiple modules that can be imported where needed, and the tutorial will do this as well.</p>
+					<% var lessons = [];
+					for (var i=0; i<lessonInfo.length; i++) {
+						if (thisPark.parkCode == lessonInfo[i].parks) {
+							lessons.push(lessonInfo[i]);
+						}
+					}
+
+					if (lessons.length == 0) { %>
+						<p>There are currently no lesson plans for this park.</p>
+					<% }
+					else { %>
+					<ul>
+						<% for (var j=0; j<lessons.length; j++) { %>
+							<li><a href="<%=encodeURI(lessons[j].url)%>" class="custom-card"><strong><u><%= lessons[j].title%></strong></u></a></li>
+							<p><%= lessons[j].questionobjective%></p>
+						<% } %>
+					</ul>
+					<% } %>
+
+					<h3>People</h3>
+					<% var people = [];
+					for (var i=0; i<peopleInfo.length; i++) {
+						if (JSON.stringify(peopleInfo[i]).includes(thisPark.name)) {
+							people.push(peopleInfo[i]);
+						}
+						else if (JSON.stringify(thisPark).includes(peopleInfo[i].title)) {
+							people.push(peopleInfo[i]);
+						}
+					}
+
+					if (people.length == 0) { %>
+						<p>There is currently no information about related people for this park.</p>
+					<% }
+					else { %>
+					<ul>
+						<% for (var j=0; j<people.length; j++) { %>
+							<li><a href="<%=encodeURI(people[j].url)%>" class="custom-card"><strong><u><%= people[j].title%></strong></u></a></li>
+							<p><%= people[j].listingdescription%></p>
+						<% } %>
+					</ul>
+					<% } %>
+
+					<h3>Places</h3>
+					<% var places = [];
+					for (var i=0; i<placeInfo.length; i++) {
+						if (JSON.stringify(placeInfo[i]).includes(thisPark.name)) {
+							places.push(placeInfo[i]);
+						}
+					}
+
+					if (places.length == 0) { %>
+						<p>There is currently no information about related places for this park.</p>
+					<% }
+					else { %>
+					<ul>
+						<% for (var j=0; j<places.length; j++) { %>
+							<li><a href="<%=encodeURI(places[j].url)%>" class="custom-card"><strong><u><%= places[j].title%></strong></u></a></li>
+							<p><%= places[j].listingdescription%></p>
+						<% } %>
+					</ul>
+					<% } %>
 				</div>
 			</div>
 		</div>
@@ -125,7 +290,7 @@
 							}
 
 							if (visitorCenters.length == 0) { %>
-								There is currently no information for visitor centers at this park.
+								There is currently no information about visitor centers for this park.
 							<% }
 							else { %>
 								<ul>
@@ -167,7 +332,7 @@
 							}
 
 							if (camps.length == 0) { %>
-								There is currently no information for campgrounds at this park.
+								There is currently no information about campgrounds for this park.
 							<% }
 							else { %>
 								<ul>
